# epic

./: CHANGELOG.md  CMakeLists.txt  Doxyfile  README.md  example_scenario_DVMP_CGC.xml  example_scenario_DVMP_GPD.xml  example_scenario_GAM2.xml  test.xml
.github/: CODEOWNERS
.github/workflows/: cmake.yml  code-build-test.yml  docker-image.yml
cmake/Modules/: FindApfel++.cmake  FindElementaryUtils.cmake  FindNumA++.cmake  FindPARTONS.cmake  FindSFML.cmake
cmake/Version/: EpicVersion.h_in
data/: xmlSchema.partons.xsd  xmlSchema.xsd
data/DDVCSCFFTables/: makeROOTTree.cpp  tables_GK.root  tables_GK.txt
data/DVCSCFFCMILOU3DTables/: makeROOTTree.cpp  tables_GK.txt  tables_KM20.root  tables_KM20.txt
data/DVCSCrossSectionMRSS/: makeROOTTree.cpp  tables_MRSS.root  tables_MRSS.txt
data/DVMPCFFTables/: makeROOTTree.cpp  pi0_table_GK.root  pi0_table_GK.txt
data/DVMPCrossSectionMRSS/: jpsigrid.txt  makeROOTTree.cpp  tables_MRSS.root  tables_MRSS.txt
data/DVMPProcessTOYMCTables/: makeROOTTree.cpp  tables_10_100.root  tables_160_0.938272013.root  tables_18_275.root  tables_5_100.root  tables_5_41.root
data/docker/: Dockerfile.epic  Dockerfile.epicBase
data/examples/: epic_scenario_DDVCS.xml  epic_scenario_DVCS.xml  epic_scenario_DVMP.xml  epic_scenario_GAM2.xml  epic_scenario_TCS.xml  example_scenario_DVCS.xml  example_scenario_DVMP.xml  example_scenario_GAM2.xml  example_scenario_TCS.xml
doc/: .gitignore
docs/: Doxyfile  Gemfile  _config.yml  about.markdown  acknowledgements.markdown  contact.markdown  index.markdown  instalation.markdown  license.markdown  test.md  usage.markdown
docs/_includes/: head-custom.html
docs/_layouts/: default.html
docs/_posts/: 2022-02-03-welcome-to-jekyll.markdown
include/: .gitignore  Epic.h
include/automation/: MonteCarloParser.h  MonteCarloScenario.h  MonteCarloTask.h
include/beans/containers/: ContainerUtils.h  DDVCSKinematic.h  DDVCSKinematicRanges.h  DVCSKinematic.h  DVCSKinematicRanges.h  DVMPKinematic.h  DVMPKinematicRanges.h  ExperimentalConditions.h  GAM2Kinematic.h  GAM2KinematicRanges.h  GeneralConfiguration.h  GenerationInformation.h  KinematicRange.h  TCSKinematic.h  TCSKinematicRanges.h
include/beans/other/: EventGeneratorInterface.h
include/beans/physics/: Event.h  Particle.h  Vertex.h
include/beans/types/: AxisType.h  EventAttributeType.h  ParticleCodeType.h  ParticleType.h
include/managers/: ModuleObjectFactory.h  RandomSeedManager.h  ServiceObjectRegistry.h
include/modules/: EpicModuleObject.h
include/modules/event_generator/: EventGeneratorFOAM.h  EventGeneratorModule.h  EventGeneratorROOT.h
include/modules/kinematic/: KinematicModule.h
include/modules/radiative_corrections/: RCModule.h
include/modules/random_generator/: RandomNumberGSL.h  RandomNumberModule.h
include/modules/writer/: WriterHepMC3.h  WriterHepMC3AsciiAndPythia6.h  WriterHepMC3Type.h  WriterModule.h  WriterPythia6.h
include/services/: AutomationService.h  DDVCSGeneratorService.h  DVCSGeneratorService.h  DVMPGeneratorService.h  GAM2GeneratorService.h  GeneratorService.h  TCSGeneratorService.h  TestingService.h
src/: Epic.cpp  main.cpp
src/automation/: MonteCarloParser.cpp  MonteCarloScenario.cpp  MonteCarloTask.cpp
src/beans/containers/: ContainerUtils.cpp  DDVCSKinematic.cpp  DDVCSKinematicRanges.cpp  DVCSKinematic.cpp  DVCSKinematicRanges.cpp  DVMPKinematic.cpp  DVMPKinematicRanges.cpp  ExperimentalConditions.cpp  GAM2Kinematic.cpp  GAM2KinematicRanges.cpp  (+5 more)
src/managers/: ModuleObjectFactory.cpp  RandomSeedManager.cpp  ServiceObjectRegistry.cpp
src/modules/: EpicModuleObject.cpp
src/services/: AutomationService.cpp  DDVCSGeneratorService.cpp  DVCSGeneratorService.cpp  DVMPGeneratorService.cpp  GAM2GeneratorService.cpp  TCSGeneratorService.cpp  TestingService.cpp
test/: check_clang_format.sh
test/compare/: .gitignore  make_comparison.cpp  script
test/physics/: CS_Q2.txt  CS_t.txt  CS_xB.txt  DVCSEvent.h  TCSEvent.h  compile  reader.cpp
(+836 files in other folders)
